--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+<!--     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Portfolio by surajbokey</title>
 
@@ -10,10 +10,10 @@
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <![endif]--> -->
   </head>
   <body>
-    <div class="wrapper">
+<!--     <div class="wrapper">
       <header>
         <h1>Portfolio</h1>
         <p></p>
@@ -50,6 +50,7 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+     -->
+    <center>We are Coming Soon</center>
   </body>
 </html>
